# superq

./: .gitignore  Makefile  pyproject.toml  ruff.toml  setup.cfg
.github/workflows/: ci.yml  release.yml  workflow.yml
superq/: __init__.py  bson.py  callbacks.py  cli.py  config.py  queues.py  tasks.py  workers.py  wrapped_fn.py
superq/backends/: backend_base.py  backend_memory.py  backend_mongo.py  backend_sqlite.py
superq/executors/: executor_asyncio.py  executor_base.py  executor_pool.py  executor_process.py  executor_thread.py
superq/testing/: test_cli.py  test_executors.py  test_queue.py  test_tasks.py  testing_utils.py
